--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+anyio==3.6.2
 blis==0.7.4
 catalogue==2.0.6
 certifi==2021.10.8
@@ -26,9 +27,11 @@ regex==2021.10.8
 requests==2.26.0
 scipy==1.7.1
 smart-open==5.2.1
+sniffio==1.3.0
 spacy==3.1.3
 spacy-legacy==3.0.8
 srsly==2.4.1
+starlette==0.22.0
 textblob==0.15.3
 thinc==8.0.10
 tqdm==4.62.3
