--- a/vercel.json
+++ b/vercel.json
@@ -7,8 +7,13 @@
     ],
     "routes": [
       {
-        "src": "/(.*)",
+        "src": "/",
         "dest": "entrypoint.py"
+      },
+      {
+        "src": "/(.*)", 
+        "status": 404, 
+        "dest": "entrypoint.py" 
       }
     ]
   }
