--- a/pyvenv.cfg
+++ b/pyvenv.cfg
@@ -1,8 +1,8 @@
-home = /usr
+home = /usr/bin
 implementation = CPython
-version_info = 3.9.14.final.0
-virtualenv = 20.16.3
+version_info = 3.8.18.final.0
+virtualenv = 20.25.0
 include-system-site-packages = false
 base-prefix = /usr
 base-exec-prefix = /usr
-base-executable = /usr/bin/python3.9
+base-executable = /usr/bin/python3.8
