--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,33 @@
-anyio==3.6.2
-blis==0.7.4
-catalogue==2.0.6
-certifi==2021.10.8
-charset-normalizer==2.0.7
-click==8.0.3
-colorama==0.4.4
-cymem==2.0.5
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.1.0/en_core_web_sm-3.1.0-py3-none-any.whl
-Flask==2.0.2
-gunicorn==20.1.0
-idna==3.3
-itsdangerous==2.0.1
-Jinja2==3.0.2
-joblib==1.1.0
-MarkupSafe==2.0.1
-murmurhash==1.0.5
-nltk==3.6.5
-numpy==1.21.2
-packaging==21.0
-pathy==0.6.0
-preshed==3.0.5
-pydantic==1.8.2
-pyparsing==2.4.7
-python-dotenv==0.19.1
-regex==2021.10.8
-requests==2.26.0
-scipy==1.7.1
-smart-open==5.2.1
-sniffio==1.3.0
-spacy==3.1.3
-spacy-legacy==3.0.8
-srsly==2.4.1
-starlette==0.22.0
-textblob==0.15.3
-thinc==8.0.10
-tqdm==4.62.3
-typer==0.4.0
-typing-extensions==3.10.0.2
-urllib3==1.26.7
-wasabi==0.8.2
-Werkzeug==2.0.2
+blis==0.7.11 ; python_version >= "3.8" and python_version < "4.0"
+catalogue==2.0.10 ; python_version >= "3.8" and python_version < "4.0"
+certifi==2023.11.17 ; python_version >= "3.8" and python_version < "4.0"
+charset-normalizer==3.3.2 ; python_version >= "3.8" and python_version < "4.0"
+click==8.1.7 ; python_version >= "3.8" and python_version < "4.0"
+colorama==0.4.6 ; python_version >= "3.8" and python_version < "4.0" and platform_system == "Windows"
+cymem==2.0.8 ; python_version >= "3.8" and python_version < "4.0"
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.1.0/en_core_web_sm-3.1.0-py3-none-any.whl ; python_version >= "3.8" and python_version < "4.0"
+flask==2.0.2 ; python_version >= "3.8" and python_version < "4.0"
+idna==3.6 ; python_version >= "3.8" and python_version < "4.0"
+itsdangerous==2.1.2 ; python_version >= "3.8" and python_version < "4.0"
+jinja2==3.1.2 ; python_version >= "3.8" and python_version < "4.0"
+markupsafe==2.1.3 ; python_version >= "3.8" and python_version < "4.0"
+murmurhash==1.0.10 ; python_version >= "3.8" and python_version < "4.0"
+numpy==1.24.4 ; python_version >= "3.8" and python_version < "4.0"
+packaging==23.2 ; python_version >= "3.8" and python_version < "4.0"
+pathy==0.10.3 ; python_version >= "3.8" and python_version < "4.0"
+preshed==3.0.9 ; python_version >= "3.8" and python_version < "4.0"
+pydantic==1.8.2 ; python_version >= "3.8" and python_version < "4.0"
+python-decouple==3.8 ; python_version >= "3.8" and python_version < "4.0"
+requests==2.31.0 ; python_version >= "3.8" and python_version < "4.0"
+setuptools==69.0.2 ; python_version >= "3.8" and python_version < "4.0"
+smart-open==6.4.0 ; python_version >= "3.8" and python_version < "4.0"
+spacy-legacy==3.0.12 ; python_version >= "3.8" and python_version < "4.0"
+spacy==3.1.3 ; python_version >= "3.8" and python_version < "4.0"
+srsly==2.4.8 ; python_version >= "3.8" and python_version < "4.0"
+thinc==8.0.17 ; python_version >= "3.8" and python_version < "4.0"
+tqdm==4.66.1 ; python_version >= "3.8" and python_version < "4.0"
+typer==0.4.2 ; python_version >= "3.8" and python_version < "4.0"
+typing-extensions==4.4.0 ; python_version >= "3.8" and python_version < "4.0"
+urllib3==2.1.0 ; python_version >= "3.8" and python_version < "4.0"
+wasabi==0.10.1 ; python_version >= "3.8" and python_version < "4.0"
+werkzeug==2.2.2 ; python_version >= "3.8" and python_version < "4.0"
