--- a/vercel.json
+++ b/vercel.json
@@ -1,30 +1,14 @@
 {
-    "version": 2,
-    "builds": [
+  "builds": [
       {
-        "src": "app.py",
-        "use": "@vercel/python",
-        "config": {
-          "runtime": "python3.9"
-        }
-      },
-      {
-        "src": "build.sh",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "staticfiles_build"
-        }
+          "src": "app.py",
+          "use": "@vercel/python"
       }
-    ],
-    "routes": [
+  ],
+  "routes": [
       {
-        "src": "/static/(.*)",
-        "headers": { "cache-control": "s-maxage=31536000, immutable" },
-        "dest": "/static/$1"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "app.py"
+          "src": "/(.*)",
+          "dest": "app.py"
       }
-    ]
-  }
+  ]
+}
